--- a/styles/shoelace/variables.less
+++ b/styles/shoelace/variables.less
@@ -1,5 +1,12 @@
 // Variables
 
+// Fonts
+
+// Body
+@font-family: 'Open Sans';
+@line-height: 16px;
+@font-size: '10px';
+
 // Colors
 @color-default:;
 @color-primary:;
