--- a/styles/shoelace/typography.less
+++ b/styles/shoelace/typography.less
@@ -1,5 +1,31 @@
 // Typography
 
+// Fonts
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans|Lato:300,400,700,300italic,400italic,700italic|Open+Sans:300italic,400italic,700italic,400,700|Raleway:400,300,700|Oswald:400,300,700);
+
+// Body
+body {
+    font-family: @font-family;
+    font-size: (@font-size * 1.6);
+    line-height: @line-height;
+
+    @media @tablet-landscape {
+        (@font-size * 1.55);
+    }
+
+    @media @tablet-portrait {
+        (@font-size * 1.5);
+    }
+
+    @media @mobile-landscape {
+        (@font-size * 1.45);
+    }
+
+    @media @mobile-portrait {
+        (@font-size * 1.4);
+    }
+}
+
 // Headers
 h1, h2, h3, h4, h5, h6 {
 
@@ -62,44 +88,45 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+    font-size: (@font-size * 4);
     font-size: 4em;
     margin: 20px 0 10px;
 
     @media @tablet-landscape {
-        font-size: 3.6em;
+        font-size: (@font-size * 3.6);
     }
 
     @media @tablet-portrait {
-        font-size: 3.2em;
+        font-size: (@font-size * 3.2);
     }
 
     @media @mobile-landscape {
-        font-size: 2.8em;
+        font-size: (@font-size * 2.8);
     }
 
     @media @mobile-portrait {
-        font-size: 2.4em;
+        font-size: (@font-size * 2.4);
     }
 }
 
 h2 {
-    font-size: 2.6em;
+    font-size: (@font-size * 2.6);
     margin: 20px 0 10px;
 
     @media @tablet-landscape {
-        font-size: 2.4em;
+        font-size: (@font-size * 2.4);
     }
 
     @media @tablet-portrait {
-        font-size: 2.2em;
+        font-size: (@font-size * 2.2);
     }
 
     @media @mobile-landscape {
-        font-size: 2em;
+        font-size: (@font-size * 2);
     }
 
     @media @mobile-portrait {
-        font-size: 1.8em;
+        font-size: (@font-size * 1.8);
     }
 }
 
