Grid and Tile Updates

--- a/styles/shoelace/media.less
+++ b/styles/shoelace/media.less
@@ -8,14 +8,14 @@ img {
     }
     
     &[class^='position'] {
-	    margin-bottom: 10px;
+	    margin-bottom: (@padding / 2);
     }
 
     &.position-left {
-    	margin-right: 10px;
+    	margin-right: (@padding / 2);
     }
 
     &.position-right {
-        margin-left: 10px;
+        margin-left: (@padding / 2);
     }
 }
