--- a/styles/shoelace/shoelace.less
+++ b/styles/shoelace/shoelace.less
@@ -10,8 +10,8 @@
 @import "media.less";
 @import "grid.less";
 
-// Components
-@import "icons.less";
-
 // Utilities
 @import "utilities.less";
+
+// Theme
+@import "theme.less";
