--- a/styles/shoelace/grid.less
+++ b/styles/shoelace/grid.less
@@ -1,397 +1,374 @@
 // Grid
+
+.border-top-radius(@radius) {
+	border-top-right-radius: @radius;
+	border-top-left-radius: @radius;
+}
+
 .grid {
     display: block;
     letter-spacing: -4.15px;
-    
-    [class^='tile'] {
-        box-sizing: border-box;
-        display: inline-block;
-        letter-spacing: normal;
-        position: relative;
-        vertical-align: top;
-    }
-    
-    &.grid-padding {
-        margin: -20px -10px;
-	    padding: 10px 0;
-	    
-	    [class^='tile'] {
-            padding: 10px;
-        }
+    margin: 0 -10px;
 
-    }
 }
 
-@media @tv-1080p {
-    .tile-12-tv-1080p {
-        width: 100%;
-    }
-
-    .tile-11-tv-1080p {
-        width: 91.666666667%;
-    }
-
-    .tile-10-tv-1080p {
-        width: 83.333333333%;
-    }
-
-    .tile-9-tv-1080p {
-        width: 75%;
-    }
-
-    .tile-8-tv-1080p {
-        width: 66.666666667%;
-    }
-
-    .tile-7-tv-1080p {
-        width: 58.333333333%;
-    }
-
-    .tile-6-tv-1080p {
-        width: 50%;
-    }
-
-    .tile-5-tv-1080p {
-        width: 41.666666667%;
-    }
-
-    .tile-4-tv-1080p {
-        width: 33.333333333%;
-    }
-
-    .tile-3-tv-1080p {
-        width: 25%;
-    }
-
-    .tile-2-tv-1080p {
-        width: 16.666666667%;
-    }
-
-    .tile-1-tv-1080p {
-        width: 8.333333333%;
-    }
+[class^='tile'] {
+    box-sizing: border-box;
+    display: inline-block;
+    letter-spacing: normal;
+    padding-left: (@padding / 2);
+    padding-right: (@padding / 2);
+    position: relative;
+    vertical-align: top;
+    width: @tile-12;
 }
 
-@media @tv-720p {
-    .tile-12-tv-720p {
-        width: 100%;
-    }
-
-    .tile-11-tv-720p {
-        width: 91.666666667%;
-    }
-
-    .tile-10-tv-720p {
-        width: 83.333333333%;
-    }
-
-    .tile-9-tv-720p {
-        width: 75%;
-    }
-
-    .tile-8-tv-720p {
-        width: 66.666666667%;
-    }
-
-    .tile-7-tv-720p {
-        width: 58.333333333%;
-    }
-
-    .tile-6-tv-720p {
-        width: 50%;
-    }
-
-    .tile-5-tv-720p {
-        width: 41.666666667%;
-    }
-
-    .tile-4-tv-720p {
-        width: 33.333333333%;
-    }
-
-    .tile-3-tv-720p {
-        width: 25%;
-    }
-
-    .tile-2-tv-720p {
-        width: 16.666666667%;
-    }
-
-    .tile-1-tv-720p {
-        width: 8.333333333%;
-    }
-}
-
-@media @desktop {
-    .tile-12-desktop {
-        width: 100%;
-    }
-
-    .tile-11-desktop {
-        width: 91.666666667%;
-    }
-
-    .tile-10-desktop {
-        width: 83.333333333%;
-    }
-
-    .tile-9-desktop {
-        width: 75%;
-    }
-
-    .tile-8-desktop {
-        width: 66.666666667%;
-    }
-
-    .tile-7-desktop {
-        width: 58.333333333%;
-    }
-
-    .tile-6-desktop {
-        width: 50%;
-    }
-
-    .tile-5-desktop {
-        width: 41.666666667%;
-    }
-
-    .tile-4-desktop {
-        width: 33.333333333%;
-    }
-
-    .tile-3-desktop {
-        width: 25%;
-    }
-
-    .tile-2-desktop {
-        width: 16.666666667%;
-    }
-
-    .tile-1-desktop {
-        width: 8.333333333%;
-    }
-}
-
-@media @tablet-landscape {
-    .tile-12-tablet-landscape {
-        width: 100%;
-    }
-
-    .tile-11-tablet-landscape {
-        width: 91.666666667%;
-    }
-
-    .tile-10-tablet-landscape {
-        width: 83.333333333%;
-    }
-
-    .tile-9-tablet-landscape {
-        width: 75%;
-    }
-
-    .tile-8-tablet-landscape {
-        width: 66.666666667%;
-    }
-
-    .tile-7-tablet-landscape {
-        width: 58.333333333%;
-    }
-
-    .tile-6-tablet-landscape {
-        width: 50%;
-    }
-
-    .tile-5-tablet-landscape {
-        width: 41.666666667%;
-    }
-
-    .tile-4-tablet-landscape {
-        width: 33.333333333%;
-    }
-
-    .tile-3-tablet-landscape {
-        width: 25%;
-    }
-
-    .tile-2-tablet-landscape {
-        width: 16.666666667%;
-    }
-
-    .tile-1-tablet-landscape {
-        width: 8.333333333%;
-    }
-}
-
-@media @tablet-portrait {
-    .tile-12-tablet-portrait {
-        width: 100%;
-    }
-
-    .tile-11-tablet-portrait {
-        width: 91.666666667%;
-    }
-
-    .tile-10-tablet-portrait {
-        width: 83.333333333%;
-    }
-
-    .tile-9-tablet-portrait {
-        width: 75%;
-    }
-
-    .tile-8-tablet-portrait {
-        width: 66.666666667%;
-    }
-
-    .tile-7-tablet-portrait {
-        width: 58.333333333%;
-    }
-
-    .tile-6-tablet-portrait {
-        width: 50%;
-    }
-
-    .tile-5-tablet-portrait {
-        width: 41.666666667%;
-    }
-
-    .tile-4-tablet-portrait {
-        width: 33.333333333%;
-    }
-
-    .tile-3-tablet-portrait {
-        width: 25%;
-    }
-
-    .tile-2-tablet-portrait {
-        width: 16.666666667%;
-    }
-
-    .tile-1-tablet-portrait {
-        width: 8.333333333%;
-    }
-}
-
-@media @mobile-landscape {
-    .tile-12-mobile-landscape {
-        width: 100%;
-    }
-
-    .tile-11-mobile-landscape {
-        width: 91.666666667%;
-    }
-
-    .tile-10-mobile-landscape {
-        width: 83.333333333%;
-    }
-
-    .tile-9-mobile-landscape {
-        width: 75%;
-    }
-
-    .tile-8-mobile-landscape {
-        width: 66.666666667%;
-    }
-
-    .tile-7-mobile-landscape {
-        width: 58.333333333%;
-    }
-
-    .tile-6-mobile-landscape {
-        width: 50%;
-    }
-
-    .tile-5-mobile-landscape {
-        width: 41.666666667%;
-    }
-
-    .tile-4-mobile-landscape {
-        width: 33.333333333%;
-    }
-
-    .tile-3-mobile-landscape {
-        width: 25%;
-    }
-
-    .tile-2-mobile-landscape {
-        width: 16.666666667%;
-    }
-
-    .tile-1-mobile-landscape {
-        width: 8.333333333%;
-    }
-}
-
-@media @mobile-portrait {
-    .tile-12-mobile-portrait {
-        width: 100%;
-    }
-
-    .tile-11-mobile-portrait {
-        width: 91.666666667%;
-    }
-
-    .tile-10-mobile-portrait {
-        width: 83.333333333%;
-    }
-
-    .tile-9-mobile-portrait {
-        width: 75%;
-    }
-
-    .tile-8-mobile-portrait {
-        width: 66.666666667%;
-    }
-
-    .tile-7-mobile-portrait {
-        width: 58.333333333%;
-    }
-
-    .tile-6-mobile-portrait {
-        width: 50%;
-    }
-
-    .tile-5-mobile-portrait {
-        width: 41.666666667%;
-    }
-
-    .tile-4-mobile-portrait {
-        width: 33.333333333%;
-    }
-
-    .tile-3-mobile-portrait {
-        width: 25%;
+@media (max-width: @mobile-portrait-maximum) {
+    .tile-1-mobile-portrait {
+        width: @tile-1;
     }
 
     .tile-2-mobile-portrait {
-        width: 16.666666667%;
+        width: @tile-2;
     }
 
-    .tile-1-mobile-portrait {
-        width: 8.333333333%;
+    .tile-3-mobile-portrait {
+        width: @tile-3;
+    }
+
+    .tile-4-mobile-portrait {
+        width: @tile-4;
+    }
+
+    .tile-5-mobile-portrait {
+        width: @tile-5;
+    }
+
+    .tile-6-mobile-portrait {
+        width: @tile-6;
+    }
+
+    .tile-7-mobile-portrait {
+        width: @tile-7;
+    }
+
+    .tile-8-mobile-portrait {
+        width: @tile-8;
+    }
+
+    .tile-9-mobile-portrait {
+        width: @tile-9;
+    }
+
+    .tile-10-mobile-portrait {
+        width: @tile-10;
+    }
+
+    .tile-11-mobile-portrait {
+        width: @tile-11;
+    }
+
+    .tile-12-mobile-portrait {
+        width: @tile-12;
     }
 }
 
-html {
-    font-size: 62.5%;
+@media (min-width: @tablet-landscape-minimum) {
+    .tile-1-mobile-landscape {
+        width: @tile-1;
+    }
+
+    .tile-2-mobile-landscape {
+        width: @tile-2;
+    }
+
+    .tile-3-mobile-landscape {
+        width: @tile-3;
+    }
+
+    .tile-4-mobile-landscape {
+        width: @tile-4;
+    }
+
+    .tile-5-mobile-landscape {
+        width: @tile-5;
+    }
+
+    .tile-6-mobile-landscape {
+        width: @tile-6;
+    }
+
+    .tile-7-mobile-landscape {
+        width: @tile-7;
+    }
+
+    .tile-8-mobile-landscape {
+        width: @tile-8;
+    }
+
+    .tile-9-mobile-landscape {
+        width: @tile-9;
+    }
+
+    .tile-10-mobile-landscape {
+        width: @tile-10;
+    }
+
+    .tile-11-mobile-landscape {
+        width: @tile-11;
+    }
+
+    .tile-12-mobile-landscape {
+        width: @tile-12;
+    }
 }
 
-body {
-    font-size: 1.6em;
-
-    @media @tablet-landscape {
-        font-size: 1.55em;
+@media (min-width: @tablet-portrait-minimum) {
+    .tile-1-tablet-portrait {
+        width: @tile-1;
     }
 
-    @media @tablet-portrait {
-        font-size: 1.5em;
+    .tile-2-tablet-portrait {
+        width: @tile-2;
     }
 
-    @media @mobile-landscape {
-        font-size: 1.45em;
+    .tile-3-tablet-portrait {
+        width: @tile-3;
     }
 
-    @media @mobile-portrait {
-        font-size: 1.4em;
+    .tile-4-tablet-portrait {
+        width: @tile-4;
+    }
+
+    .tile-5-tablet-portrait {
+        width: @tile-5;
+    }
+
+    .tile-6-tablet-portrait {
+        width: @tile-6;
+    }
+
+    .tile-7-tablet-portrait {
+        width: @tile-7;
+    }
+
+    .tile-8-tablet-portrait {
+        width: @tile-8;
+    }
+
+    .tile-9-tablet-portrait {
+        width: @tile-9;
+    }
+
+    .tile-10-tablet-portrait {
+        width: @tile-10;
+    }
+
+    .tile-11-tablet-portrait {
+        width: @tile-11;
+    }
+
+    .tile-12-tablet-portrait {
+        width: @tile-12;
+    }
+}
+
+@media (min-width: @tablet-landscape-minimum) {
+    .tile-1-tablet-landscape {
+        width: @tile-1;
+    }
+
+    .tile-2-tablet-landscape {
+        width: @tile-2;
+    }
+
+    .tile-3-tablet-landscape {
+        width: @tile-3;
+    }
+
+    .tile-4-tablet-landscape {
+        width: @tile-4;
+    }
+
+    .tile-5-tablet-landscape {
+        width: @tile-5;
+    }
+
+    .tile-6-tablet-landscape {
+        width: @tile-6;
+    }
+
+    .tile-7-tablet-landscape {
+        width: @tile-7;
+    }
+
+    .tile-8-tablet-landscape {
+        width: @tile-8;
+    }
+
+    .tile-9-tablet-landscape {
+        width: @tile-9;
+    }
+
+    .tile-10-tablet-landscape {
+        width: @tile-10;
+    }
+
+    .tile-11-tablet-landscape {
+        width: @tile-11;
+    }
+
+    .tile-12-tablet-landscape {
+        width: @tile-12;
+    }
+}
+
+@media (min-width: @desktop-minimum) {
+    .tile-1-desktop {
+        width: @tile-1;
+    }
+
+    .tile-2-desktop {
+        width: @tile-2;
+    }
+
+    .tile-3-desktop {
+        width: @tile-3;
+    }
+
+    .tile-4-desktop {
+        width: @tile-4;
+    }
+
+    .tile-5-desktop {
+        width: @tile-5;
+    }
+
+    .tile-6-desktop {
+        width: @tile-6;
+    }
+
+    .tile-7-desktop {
+        width: @tile-7;
+    }
+
+    .tile-8-desktop {
+        width: @tile-8;
+    }
+
+    .tile-9-desktop {
+        width: @tile-9;
+    }
+
+    .tile-10-desktop {
+        width: @tile-10;
+    }
+
+    .tile-11-desktop {
+        width: @tile-11;
+    }
+
+    .tile-12-desktop {
+        width: @tile-12;
+    }
+}
+
+@media (min-width: @tv-720p-minimum) {
+    .tile-1-tv-720p {
+        width: @tile-1;
+    }
+
+    .tile-2-tv-720p {
+        width: @tile-2;
+    }
+
+    .tile-3-tv-720p {
+        width: @tile-3;
+    }
+
+    .tile-4-tv-720p {
+        width: @tile-4;
+    }
+
+    .tile-5-tv-720p {
+        width: @tile-5;
+    }
+
+    .tile-6-tv-720p {
+        width: @tile-6;
+    }
+
+    .tile-7-tv-720p {
+        width: @tile-7;
+    }
+
+    .tile-8-tv-720p {
+        width: @tile-8;
+    }
+
+    .tile-9-tv-720p {
+        width: @tile-9;
+    }
+
+    .tile-10-tv-720p {
+        width: @tile-10;
+    }
+
+    .tile-11-tv-720p {
+        width: @tile-11;
+    }
+
+    .tile-12-tv-720p {
+        width: @tile-12;
+    }
+}
+
+@media (min-width: @tv-1080p-minimum) {
+    .tile-1-tv-1080p {
+        width: @tile-1;
+    }
+
+    .tile-2-tv-1080p {
+        width: @tile-2;
+    }
+
+    .tile-3-tv-1080p {
+        width: @tile-3;
+    }
+
+    .tile-4-tv-1080p {
+        width: @tile-4;
+    }
+
+    .tile-5-tv-1080p {
+        width: @tile-5;
+    }
+
+    .tile-6-tv-1080p {
+        width: @tile-6;
+    }
+
+    .tile-7-tv-1080p {
+        width: @tile-7;
+    }
+
+    .tile-8-tv-1080p {
+        width: @tile-8;
+    }
+
+    .tile-9-tv-1080p {
+        width: @tile-9;
+    }
+
+    .tile-10-tv-1080p {
+        width: @tile-10;
+    }
+
+    .tile-11-tv-1080p {
+        width: @tile-11;
+    }
+
+    .tile-12-tv-1080p {
+        width: @tile-12;
     }
 }
