--- a/styles/shoelace/typography.less
+++ b/styles/shoelace/typography.less
@@ -56,6 +56,8 @@ h1, h2, h3, h4, h5, h6 {
 
         &.bar-top {
 
+            padding-top: (@padding / 4);
+
             &:before {
                 bottom: 100%;
             }
@@ -75,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
             }
             
             &.text-left span {
-                padding-right: 15px;
+                padding-right: (@padding / 2);
             }
 
             &.text-center span {
@@ -92,6 +94,8 @@ h1, h2, h3, h4, h5, h6 {
         }
         
         &.bar-bottom {
+
+            padding-bottom: (@padding / 4);
 
             &:before {
                 bottom: 0;
@@ -136,8 +140,8 @@ h1, h2, h3, h4, h5, h6 {
         }
 
         &.bar {
-            padding-bottom: inherit;
-            padding-top: inherit;
+            padding-bottom: (@padding / 2);
+            padding-top: (@padding / 2);
 
             &:before {
                 margin-left: -10px;
@@ -146,6 +150,7 @@ h1, h2, h3, h4, h5, h6 {
 
             span {
                 background: inherit;
+                
             }
         }
     }
