--- a/styles/shoelace/variables.less
+++ b/styles/shoelace/variables.less
@@ -20,7 +20,7 @@
 @color-primary: red;
 @background-header: #fff;
 @color-header: #555;
-@background-main: #ccc;
+@background-main: #fff;
 @color-main: #000;
 @background-footer: #808080;
 @color-footer: #fff;
