--- a/styles/shoelace/theme.less
+++ b/styles/shoelace/theme.less
@@ -5,13 +5,13 @@ body {
 }
 
 ::selection {
-    background:;
-    color:;
+    background: @color-default;
+    color: @color-default;
 }
 
 ::-moz-selection {
-    background:;
-    color:;
+    background: @color-default;
+    color: @color-default;
 }
 
 // Links
@@ -54,7 +54,7 @@ header {
 
     h1, h2, h3, h4, h5, h6 {
 
-        &.bar.middle span {
+        &.bar.bar-middle span {
             background: @background-header;
         }
     }
@@ -66,7 +66,7 @@ main {
 
     h1, h2, h3, h4, h5, h6 {
 
-        &.bar.middle span {
+        &.bar.bar-middle span {
             background: @background-main;
         }
     }
@@ -78,7 +78,7 @@ footer {
 
     h1, h2, h3, h4, h5, h6 {
 
-        &.bar.middle span {
+        &.bar.bar-middle span {
             background: @background-footer;
         }
     }
