--- a/styles/shoelace/typography.less
+++ b/styles/shoelace/typography.less
@@ -33,11 +33,15 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.4;
 
     &.bar {
+        padding-bottom: (@padding / 4);
         position: relative;
 
         &:before {
+            background: @color-default;
+            bottom: 0;
             content: "";
             display: block;
+            height: 2px;
             position: absolute;
             width: 100%;
         }
@@ -46,16 +50,12 @@ h1, h2, h3, h4, h5, h6 {
             height: 1px;
         }
 
-        &.bar-medium:before {
-            height: 2px;
-        }
-
         &.bar-large:before {
             height: 4px;
         }
 
         &.bar-top {
-
+            padding-bottom: inherit;
             padding-top: (@padding / 4);
 
             &:before {
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
         }
 
         &.bar-middle {
+            padding-bottom: inherit;
 
             &:before {
                 bottom: 50%;
@@ -74,10 +75,6 @@ h1, h2, h3, h4, h5, h6 {
                 padding-right: (@padding / 2);
                 position: relative;
                 z-index: 1;
-            }
-            
-            &.text-left span {
-                padding-right: (@padding / 2);
             }
 
             &.text-center span {
@@ -91,19 +88,6 @@ h1, h2, h3, h4, h5, h6 {
                 margin-left: -10px;
                 padding-left: (@padding / 2);
             }
-        }
-        
-        &.bar-bottom {
-
-            padding-bottom: (@padding / 4);
-
-            &:before {
-                bottom: 0;
-            }
-        }
-
-        &.bar-default:before {
-            background: @color-default;
         }
 
         &.bar-primary:before {
@@ -150,7 +134,6 @@ h1, h2, h3, h4, h5, h6 {
 
             span {
                 background: inherit;
-                
             }
         }
     }
@@ -204,7 +187,6 @@ h3 {
     font-size: @font-size-headers-h3;
     margin-bottom: (@padding / 2);
     margin-top: (@padding / 2);
-
 }
 
 h4 {
@@ -215,7 +197,7 @@ h4 {
 
 h5 {
     font-size: @font-size-headers-h5;
-   margin-bottom: (@padding / 2);
+    margin-bottom: (@padding / 2);
     margin-top: (@padding / 2);
 }
 
@@ -227,73 +209,70 @@ h6 {
 
 // Body
 p {
-	margin-bottom: (@padding / 2);
+    margin-bottom: (@padding / 2);
     margin-top: 0;
 }
 
 // Alignment
 .text-left {
-	text-align: left;
+    text-align: left;
 }
 
 .text-right {
-	text-align: right;
+    text-align: right;
 }
 
 .text-center {
-	text-align: center;
+    text-align: center;
 }
 
 .text-justify {
-	text-align: justify;
+    text-align: justify;
 }
 
 .text-nowrap {
-	white-space: nowrap;
+    white-space: nowrap;
 }
 
 // Transformation
 .text-lowercase {
-	text-transform: lowercase;
+    text-transform: lowercase;
 }
 
 .text-uppercase {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .text-capitalize {
-	text-transform: capitalize;
+    text-transform: capitalize;
 }
 
 // Lists
 ul {
-	margin-bottom: @padding;
+    margin-bottom: @padding;
 }
 
 .list-unstyled {
-	list-style: none;
-	padding: 0;
+    list-style: none;
+    padding: 0;
 }
 
 .list-inline {
-	margin-left: -5px;
+    margin-left: -5px;
 
-	> li {
-		display: inline-block;
-		margin-left: 5px;
-		margin-right: 5px;
-	}
+    > li {
+        display: inline-block;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
 
 // Description Lists
 dl {
-
 }
 
 dt {
-
 }
 
 dd {
-
 }
